added owner account display

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-8 col-sm-push-2">
-          <h1 class="text-center">Referral Chain</h1>
+          <h1 class="text-center">Referral Chain <small class="owner-account">saad</small></h1>
           <hr/>
           <br/>
         </div>
@@ -36,12 +36,12 @@
       <div class="col-sm-6 col-md-4 col-lg-3">
         <div class="panel panel-default panel-referral">
           <div class="panel-heading">
-            <h3 class="panel-title">Scrappy</h3>
+            <h3 class="panel-title">Referral Chain</h3>
           </div>
           <div class="panel-body">
             <br/><br/>
-            <strong>Addr</strong>: <span class="referral-breed"></span><br/>
-            <strong>Private Key</strong>: <span class="referral-age"></span><br/>
+            <strong>Referral Link</strong>: <span class="referral-breed"></span><br/>
+            <br/><br/>
             <button class="btn btn-default btn-add" type="button" data-id="0">Add Referrer</button>
             <button class="btn btn-default btn-award" type="button" data-id="0" disabled=true>Award Referral</button>
           </div>
